# KRR-teaching-material

./: asp.ipynb  backup.lp  hw3.ipynb  pyproject.toml  truck_delivery.lp  wolf-goat-cabbage.lp
asp-python/: packing.lp
cdcl-solver/: example.ipynb  example1.cnf  example2.cnf
